opam-version: "2.0"
maintainer: "nick@nickrobison.com"

depends: [
  "mirage"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt"
  "ppx_deriving"
  "dune"
  "incr_dom"
  "gen_js_api"
  "ppx_deriving_yojson"
  "yaml"
  "astring"
  "ezjsonm"
  "duration"
  "ptime"
  "cow"
  "cohttp-mirage"
  "uuidm"
  "rpc" {>= "1.9.51" & < "5.0.0"} | ("rpclib" & "ppx_deriving_rpc")
]
